[package]
name = "BCLnBLC"
version = "0.1.0"
authors = ["Bubbler-4"]
edition = "2018"
description = "Interpreter for BLC and BCL"
repository = "https://github.com/Bubbler-4/BCLnBLC"
license = "MIT"
default-run = "bcl_blc"

[lib]
crate-type = ["cdylib", "rlib"]
name = "bcl_blc_lib"
path = "src/lib.rs"

[[bin]]
name = "bcl_blc"
path = "src/main.rs"

[dependencies]
nom = "6"

[dependencies.wasm-bindgen]
version = "0.2"